--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [
-    {name = "User", email = "user@example.com"}
+    {name = "Daader", email = "Foleydaadir@gmail.com"}
 ]
 dependencies = [
     "PyQt6>=6.6.1",
